--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ footer:
 author: 'Byron'
 nickname: '胖胖'
 bio: '黑夜给了我黑色的眼睛，我却用它来寻找光明。'
-avatar: 'assets/img/touxiang.png'
+avatar: 'assets/img/20150125_1530064_mh1422171589414.jpg'
 
 # Search
 search: true
